# Notes

./: README.md  makeclean.sh  process.md  write_process.sh
CXX&C language/: CXX exception handling ABI reference.md  Detail of  Unwind Table.md  Do you make sense of 'Exception tables' and 'Unwind tables"?.md  How to get current work directory.md  The Unwind Process.md  The exception handling mechanism uses three data structures.md  What about mutable keyword means ?.md  bit-field in CXX.md  std::declval.md  std::initializer_list.md  std::pointer_to_unary_function.md  what happen when attribute and method's param have the same name in a class?.md
clang/: Grammar of common Langs  for the expressions.md  How to create a lexer Preprocessor in clang?.md  class clang::BinaryOperator.md  class clang::CallExpr.md  class clang::FunctionDecl.md  class clang::FunctionType.md  class clang::ParmVarDecl.md  class clang::TypeDecl.md  class clang::TypeDecl.mdj  class clang::UnaryOperator.md  class clang::VarDecl.md  class clang::VarDecl.mdj  porting your code to build with Clang.md  where are diagnostic severity levels defined?.md
clang/AST/: How to examine the AST?.md  Introduction of AST.md  ParseAST.md  clang::TranslationUnitDecl.md  clang::TranslationUnitDecl.mdj
clang/AST/ASTMatchers/: ASTMatcher tutorial.md  Introduction of ASTMatcher.md  content.md
clang/Declaration/: class clang::FunctionDecl.md  class clang::FunctionDecl.mdj  class clang::ParmVarDecl.md  class clang::ParmVarDecl.mdj  class clang::TypeDecl.md  class clang::VarDecl.md
clang/Expression/: class clang::BinaryOperator.md  class clang::BinaryOperator.mdj  class clang::CallExpr.md  class clang::CallExpr.mdj  class clang::UnaryOperator.md  class clang::UnaryOperator.mdj
clang/Type/: class clang::ArrayType.md  class clang::ArrayType.mdj  class clang::FunctionType.md  class clang::FunctionType.mdj  class clang::ParenType.md  class clang::ParenType.mdj
clang/clang-query/: Exploring Clang Tooling Part 2: Examining the Clang AST with clang-query.md  install clang-query on ubuntu18.04.md
clang/clang-query/example/: iflhsptr.c
clang/clang-tidy/: Clang-Tidy, part 1: Modernize your source code using.md  Exploring Clang Tooling Part 1: Extending Clang-Tidy.md
cmake/: How to control includes search path.md  How to install with cmake.md  How to makeinstall with cmake.md  Project_Implicit_Variables.md  cmake variables.md  command manual.md  command_manual.md  distinguish_PROJECT_SOURCE_DIR&PROJECT_BINARY_DIR.md
cmake/example/t1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hello  main.c
cmake/example/t2/: CMakeLists.txt
cmake/example/t2/src/: CMakeLists.txt
cmake/example/t3/: CMakeLists.txt
cmake/example/t3/lib/: CMakeLists.txt  hello.c  hello.h
code_merging/: LLVM3.9ReleaseNotes.md  Replacing AES_ctr128_encrypt with CRYPTO_ctr128_encrypt.md  multicompiler3.8.md  problem_notes.md
code_merging/solve problems/: CMake Error "if given arguments *** Unknown arguments specified".md  CMake err "Found unknown source file".md
compilers techniques/: GCC Options That Control Optimization.md
compilers techniques/flex and bison/: chapter_01.md
compilers techniques/flex and bison/example/: a.out  fb1-1.l  lex.yy.c
llvm/: About llvm TableGen Lang.md  Anatomy_of_the_obfuscator.md  Directory layout.md  Directory_Layout.md  Fix glibc printf.h bug when build multicompiler.md  How to use 'b','h','w','g' to represent the bit-number of variable or object?.md  How_to_run_unittests.md  How_to_solve_OPrifleJIT_compilation_error.md  How_to_solve_Obfuscator_llvm9_compilation_error.md  LLVM Glossary.md  LLVM_Directory_Layout.md  Life of an instruction in LLVM.md  Look into the mechanism translating from source-code to machine-code in llvm.md  What dose the 'DWARF' mean in llvm?.md  What dose the 'LLVM_NODISCARD' mean in llvm?.md  What is the effect of "--debug-pass" option on opt tool?.md  What is the option `LLVM_ENABLE_EXPENSIVE_CHECKS` implication in compilation time?.md  What is the option `LLVM_ENABLE_RTTI` impication in compilation time?.md  cmake option about llvm test.md  compilation process overview.mdj  some important predefined subclass of passes.md
llvm/llvm_cookbook/: chapter_01.md  chapter_02.md  chapter_03.md
llvm/llvm_cookbook/example/chapter_02/: CMakeLists.txt  toy.cpp
llvm/llvm_cookbook/example/chapter_03_self/: 1.txt  CMakeLists.txt  common_def.cpp  lex.yy.c  lexer.l  main.cpp
llvm/llvm_cookbook/example/chapter_03_self/AST/: CMakeLists.txt  baseAST.cpp
llvm/llvm_cookbook/example/chapter_03_self/fd_stream/: CMakeLists.txt  fd_stream.cpp
llvm/llvm_cookbook/example/chapter_03_self/include/: baseAST.h  fd_stream.h  lex.yy.h  parser.h
llvm/llvm_cookbook/example/chapter_03_self/lexer/: CMakeLists.txt  lex.yy.c  lexer.l
llvm/llvm_cookbook/example/chapter_03_self/parser/: CMakeLists.txt  parser.cpp
llvm/llvm_cookbook/example/chapter_03_self/unittest/: CMakeLists.txt
llvm/llvm_cookbook/example/chapter_03_self/unittest/lexer_test/: CMakeLists.txt  main.cpp
llvm/llvm_cookbook/example/chapter_03_self/unittest/lexer_test/case01/: data.txt
other stuff/: Do you know about DSL ?.md  Why can not find AES_ctr128_encrypt defination in openssl 1.1.0g?.md
vm escape/: VM ESCAPE with exploiting CVE-2019-18389.md
vm_escape/: VM ESCAPE with exploiting CVE-2019-18389.md
vm_escape/exploit_CVE-2019-18389/: initialization.sh
(+5 files in other folders)
