cmake_minimum_required(VERSION 3.14)
project(chapter_02)
add_executable(chapter_02 toy.cpp)
set(EXECUTABLE_OUTPUT_PATH bin)
target_include_directories(chapter_02 PUBLIC
        ../../../../../source_code/llvm-project_install/include)
target_link_directories(chapter_02 PUBLIC
        ../../../../../source_code/llvm-project_install/lib)
target_link_libraries(chapter_02
        LLVMCore.a
        LLVMAggressiveInstCombine.a
        LLVMAnalysis.a
        LLVMAsmParser.a
        LLVMAsmPrinter.a
        LLVMBinaryFormat.a
        LLVMBitReader.a
        LLVMBitstreamReader.a
        LLVMBitWriter.a
        LLVMCodeGen.a
        LLVMCoroutines.a
        LLVMCoverage.a
        LLVMDebugInfoCodeView.a
        LLVMDebugInfoDWARF.a
        LLVMDebugInfoGSYM.a
        LLVMDebugInfoMSF.a
        LLVMDebugInfoPDB.a
        LLVMDemangle.a
        LLVMDlltoolDriver.a
        LLVMExecutionEngine.a
        LLVMFuzzMutate.a
        LLVMGlobalISel.a
        LLVMInstCombine.a
        LLVMInstrumentation.a
        LLVMInterpreter.a
        LLVMipo.a
        LLVMIRReader.a
        LLVMJITLink.a
        LLVMLibDriver.a
        LLVMLineEditor.a
        LLVMLinker.a
        LLVMLTO.a
        LLVMMC.a
        LLVMMCA.a
        LLVMMCDisassembler.a
        LLVMMCJIT.a
        LLVMMCParser.a
        LLVMMIRParser.a
        LLVMObjCARCOpts.a
        LLVMObject.a
        LLVMObjectYAML.a
        LLVMOption.a
        LLVMOrcJIT.a
        LLVMPasses.a
        LLVMProfileData.a
        LLVMRemarks.a
        LLVMRuntimeDyld.a
        LLVMScalarOpts.a
        LLVMSelectionDAG.a
        LLVMSymbolize.a
        LLVMTableGen.a
        LLVMTarget.a
        LLVMTextAPI.a
        LLVMTransformUtils.a
        LLVMVectorize.a
        LLVMWindowsManifest.a
        LLVMX86AsmParser.a
        LLVMX86CodeGen.a
        LLVMX86Desc.a
        LLVMX86Disassembler.a
        LLVMX86Info.a
        LLVMX86Utils.a
        LLVMXRay.a
        LTO.so
        LLVMSupport.a
        Remarks.so
        pthread)